--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,6 @@ phases:
       # docker push 556074018555.dkr.ecr.ap-south-1.amazonaws.com/angular-docker-repo:${CODEBUILD_BUILD_NUMBER}
       # printf '[{"name":"angulardockerimage","imageUri":"%s"}]' 556074018555.dkr.ecr.ap-south-1.amazonaws.com/angular-docker-repo:${CODEBUILD_BUILD_NUMBER} > containerDefinition.json
 
-artifacts:
-  files:
-     containerDefinition.json
+#artifacts:
+ # files:
+     #containerDefinition.json
