--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,6 @@
 version: 0.2
 
-env:
+#env:
   parameter-store:
     DOCKERHUB_USER: /docker/username
     DOCKERHUB_TOKEN: /docker/token
@@ -8,17 +8,19 @@ env:
 phases:
   pre_build:
     commands:
-      - echo ${DOCKERHUB_TOKEN} | docker login -u ${DOCKERHUB_USER} --password-stdin 
-      # aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 556074018555.dkr.ecr.ap-south-1.amazonaws.com
+      #- echo ${DOCKERHUB_TOKEN} | docker login -u ${DOCKERHUB_USER} --password-stdin 
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 794210788666.dkr.ecr.ap-south-1.amazonaws.com
   build:
     commands:
-      - docker build -t my-angular-app:latest .
-      # docker build -t angular-docker-repo:${CODEBUILD_BUILD_NUMBER} .
+      #- docker build -t my-angular-app:latest .
+      - docker build -t angular-docker-repo:${CODEBUILD_BUILD_NUMBER} .
 
   post_build:
     commands:
-      - docker tag my-angular-app:latest ${DOCKERHUB_USER}/angular-docker-repo:latest
-      - docker push ${DOCKERHUB_USER}/angular-docker-repo:latest
+      #- docker tag my-angular-app:latest ${DOCKERHUB_USER}/angular-docker-repo:latest
+      #- docker push ${DOCKERHUB_USER}/angular-docker-repo:latest
+      - docker tag angular-docker-repo:${CODEBUILD_BUILD_NUMBER} 794210788666.dkr.ecr.ap-south-1.amazonaws.com/angular-docker-repo:${CODEBUILD_BUILD_NUMBER}
+      - docker push 794210788666.dkr.ecr.ap-south-1.amazonaws.com/angular-docker-repo:${CODEBUILD_BUILD_NUMBER}
       # docker tag angular-docker-repo:${CODEBUILD_BUILD_NUMBER} 556074018555.dkr.ecr.ap-south-1.amazonaws.com/angular-docker-repo:${CODEBUILD_BUILD_NUMBER}
       # docker push 556074018555.dkr.ecr.ap-south-1.amazonaws.com/angular-docker-repo:${CODEBUILD_BUILD_NUMBER}
       # printf '[{"name":"angulardockerimage","imageUri":"%s"}]' 556074018555.dkr.ecr.ap-south-1.amazonaws.com/angular-docker-repo:${CODEBUILD_BUILD_NUMBER} > containerDefinition.json
@@ -26,4 +28,4 @@ phases:
 #artifacts:
  # files:
      #containerDefinition.json
-     #changing token
+    
